syntax = "proto3";

package monitoreo;

service MonitoreoService {
  rpc ListarAcciones(TokenRequest) returns (ListaAccionesResponse);
  rpc ListarErrores(TokenRequest) returns (ListaErroresResponse);
  rpc HealthCheck (Empty) returns (MensajeResponse); // âœ… NUEVO
}

message TokenRequest {
  string token = 1;
}

message Accion {
  string id = 1;
  string userId = 2;
  string userEmail = 3;
  string url = 4;
  string method = 5;
  string description = 6;
  string timestamp = 7;
}

message ErrorEntry {
  string id = 1;
  string userId = 2;
  string userEmail = 3;
  string errorMessage = 4;
  string timestamp = 5;
}

message ListaAccionesResponse {
  repeated Accion acciones = 1;
}

message ListaErroresResponse {
  repeated ErrorEntry errores = 1;
}

message MensajeResponse {
  string mensaje = 1;
}

message Empty {}